# tarin

./: .gitignore  Cargo.toml  LICENSE  README.md  sites.txt
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250408_000001_create_sites_table.rs  m20250408_000002_create_site_urls_table.rs
src/: client.rs  config.rs  main.rs  sitemaps.rs  utils.rs
src/client/: mod.rs  processor.rs  psi.rs  sitemaps.rs
src/entities/: mod.rs  prelude.rs  site_urls.rs  sites.rs
src/handlers/: mod.rs
src/routes/: mod.rs  sites.rs
