[package]
name = "tarin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
url = "2.5.4"
anyhow = "1.0.97"
quick-xml = "0.37.2"
axum = "0.8.1"
tokio-stream = "0.1.17"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
mockito = "1.7.0"
